--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.10.0"
+    "mongoose": "^8.10.0",
+    "nodemailer": "^6.10.0",
+    "otp-generator": "^4.0.1"
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
