--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node backend/server.js",
-    "server": "nodemon backend/server.js"
+    "server": "nodemon backend/server.js",
+    "frontend": "cd frontend && ng serve --port 4200",
+    "dev": "concurrently \"npm run frontend\" \"npm run server\""    
   },
   "author": "Hardik Singh",
   "license": "MIT",
