--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
     "frontend": "cd frontend && ng serve --port 4200",
-    "dev": "concurrently \"npm run frontend\" \"npm run server\""    
+    "dev": "concurrently \"npm run frontend\" \"npm run server\""
   },
   "author": "Hardik Singh",
   "license": "MIT",
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "colors": "^1.4.0",
