--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "otp-generator": "^4.0.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^19.2.0",
     "concurrently": "^9.1.2",
     "nodemon": "^3.1.9"
   }
