--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,10 @@
     "@angular/router": "^19.1.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@primeng/themes": "^19.0.10",
     "bootstrap": "^5.3.3",
     "ngx-toastr": "^19.0.0",
+    "primeng": "^19.0.10",
     "process": "^0.11.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
