--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.3",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
@@ -28,6 +29,7 @@
     "mongoose": "^8.10.0",
     "nodemailer": "^6.10.0",
     "otp-generator": "^4.0.1",
+    "razorpay": "^2.9.6",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
