--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
     "start": "node backend/index.js",
     "server": "nodemon backend/index.js",
     "frontend": "cd frontend && ng serve --port 4200",
-    "dev": "concurrently \"npm run frontend\" \"npm run server\""
+    "dev": "concurrently \"npm run server\" \"npm run frontend\""
   },
   "author": "Hardik Singh",
   "license": "MIT",
