--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -13,7 +13,7 @@
           "build": {
             "builder": "@angular-devkit/build-angular:application",
             "options": {
-              "outputPath": "build",
+              "outputPath": "dist/frontend",
               "index": "src/index.html",
               "browser": "src/main.ts",
               "polyfills": [
