--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -37,24 +37,8 @@
             },
             "configurations": {
               "production": {
-                "budgets": [
-                  {
-                    "type": "initial",
-                    "maximumWarning": "500kB",
-                    "maximumError": "1MB"
-                  },
-                  {
-                    "type": "anyComponentStyle",
-                    "maximumWarning": "4kB",
-                    "maximumError": "8kB"
-                  }
-                ],
-                "outputHashing": "all"
-              },
-              "development": {
-                "optimization": false,
-                "extractLicenses": false,
-                "sourceMap": true
+                "baseHref": "/",
+                "deployUrl": "/"
               }
             },
             "defaultConfiguration": "production"
