--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,16 +1,5 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "frontend/dist/frontend" }
-    }
-  ],
-  "routes": [
-    {
-      "src": "^/(.*)$",
-      "dest": "/index.html"
-    }
-  ]
+    "rewrites": [
+        {"source": "/(.*)", "destination": "/"}
+    ]
 }
