--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,14 @@
 {
-    "rewrites": [
-        {"source": "/(.*)", "destination": "/"}
+    "builds":[
+        {
+            "src": "frontend/dist/*",
+            "use": "@vercel/static"
+        }
+    ],
+    "routes":[
+        {
+            "src": "/(.*)",
+            "dest": "/frontend/dist/index.html"
+        }
     ]
 }
