--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
     "frontend": "cd frontend && ng serve --port 4200",
     "dev": "concurrently \"npm run server\" \"npm run frontend\""
   },
-  "dependencies": {
-    "concurrently": "^9.1.2"
-  },
   "devDependencies": {
+    "concurrently": "^9.1.2",
     "nodemon": "^3.1.9"
   }
 }
